feat: restruturação do componente enviar - passando a responsabilidade para o componente de interação

--- a/src/Components/Enviar/style.css
+++ b/src/Components/Enviar/style.css
@@ -2,11 +2,12 @@ button {
     border: none;
     background: none;
 }
+
 button:hover {
     cursor: pointer;
 }
-svg {
+
+.btn-enviar-icons>svg {
     width: 25px;
     height: 25px;
-    color: #fff;
 }
