--- a/src/Components/Footer/style.css
+++ b/src/Components/Footer/style.css
@@ -5,7 +5,7 @@ footer {
     text-align: center;
 }
 
-footer > h5 > a {
+footer > h5 > a, footer > h5 {
     color: #ff002b;
     text-decoration: none;
 }
