feat: adicionando o footer ao componente Login

--- a/src/Pages/Login/style.css
+++ b/src/Pages/Login/style.css
@@ -1,7 +1,7 @@
 .div-login-container {
     width: 100vw;
     height: 100vh;
-    background: #f8fafb;
+    background: #0C121C;
     display: flex;
     flex-direction: row;
     justify-content: center;
