feat: implementando envio de token

--- a/src/Pages/Interacao/style.css
+++ b/src/Pages/Interacao/style.css
@@ -1,6 +1,6 @@
 .div-interacao-container {
     background-color: #fff;
-    height: 91.7vh;
+    /* height: 91.7vh; */
     width: 100%;
     display: flex;
     flex-direction: row;
