--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -26,9 +26,13 @@
     width: 3.5rem;
     height: 3rem;
     background: transparent;
-    border: 1px solid #dcdce6;
+    border: 1px solid var(--red);
     border-radius: 4px;
     transition: border-color .5s;
+}
+
+.btn-header svg {
+    color: var(--red);
 }
 
 .btn-header:hover {
@@ -45,6 +49,9 @@
     color: #eee6e6;
 }
 
+.li-header {
+    color: var(--light);
+}
 
 .a-header {
     text-decoration: none;
