--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -1,6 +1,6 @@
 .div-home-container {
     background-color: var(--blue-dark);
-    height: 91.7vh;
+    /* height: 90vh; */
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -15,6 +15,13 @@
     padding: 2%;
 }
 
+.div-home-interna svg, h1 {
+    color: var(--light);
+}
+
+.div-home-interna h1 > strong {
+    color: var(--red);
+}
 table {
     width: 100%;
     border-spacing: 0;
@@ -29,7 +36,7 @@ table thead {
 }
 
 table tbody {
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 400;
     color: var(--light);
     text-align: center;
@@ -51,4 +58,16 @@ table tbody tr:hover>td {
 table tbody tr:nth-child(odd) {
     background-color: #ff002b;
     color: white;
+}
+
+.div-home-add {
+    display: flex;
+    justify-content: space-between;
+}
+
+.div-home-add > button {
+    color: var(--light);
+    border: 2px solid var(--red);
+    width: 5rem;
+    border-radius: 10px;
 }
