feat: adicionando funcionalidas de divisao adm/fun - criando função para decidir qual endpoint consultar baseado na role - função de tratamento de nome primeira maiscula e resto minuscula

--- a/src/Pages/Home/style.css
+++ b/src/Pages/Home/style.css
@@ -19,6 +19,10 @@
     color: var(--light);
 }
 
+.div-home-interna h1 span {
+    color: var(--red);
+}
+
 .div-home-interna h1 > strong {
     color: var(--red);
 }
