--- a/src/Pages/Login/style.css
+++ b/src/Pages/Login/style.css
@@ -30,6 +30,10 @@
     flex-direction: column;
 }
 
+.div-login-inputs input {
+    color: var(--blue);
+}
+
 .div-login-inputs>form>div {
     display: flex;
     flex-direction: column;
@@ -41,7 +45,7 @@
 }
 
 .btn-login {
-    margin-top: 10%;
+    margin-top: 5%;
     height: 3rem;
     width: 100%;
     border: none;
@@ -60,4 +64,10 @@
 span {
     color: #000000;
     margin-top: 5%;
+}
+
+.btn-login-eye {
+    position: absolute;
+    right: 41%;
+    top: 46.5%;
 }
