refactor: atualizando nome da classe css

--- a/src/Pages/Informacoes/style.css
+++ b/src/Pages/Informacoes/style.css
@@ -51,7 +51,7 @@
     width: 70%;
 }
 
-.form-informacoes {
+.div-informacoes-inputs {
     display: flex;
     flex-direction: column;
     align-items: center;
